--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -1,20 +1,17 @@
-# Python package
-# Create and test a Python package on multiple Python versions.
-# Add steps that analyze code, save the dist with the build record, publish to a PyPI-compatible index, and more:
-# https://docs.microsoft.com/azure/devops/pipelines/languages/python
-
 trigger:
 - main
 
-pool: "PierrePool"
+pool:
+  vmImage: ubuntu-latest
+
 strategy:
   matrix:
-    Python35:
-      python.version: '3.5'
-    Python36:
-      python.version: '3.6'
-    Python37:
-      python.version: '3.7'
+    Python38:
+      python.version: '3.8'
+    Python39:
+      python.version: '3.9'
+    Python310:
+      python.version: '3.10'
 
 steps:
 - task: UsePythonVersion@0
@@ -30,4 +27,11 @@ steps:
 - script: |
     pip install pytest pytest-azurepipelines
     pytest
-  displayName: 'pytest'
+  displayName: 'Run tests with pytest'
+
+# Assuming your scripts generate artifacts in a folder named 'artifacts'
+- task: PublishBuildArtifacts@1
+  inputs:
+    PathtoPublish: 'artifacts' # Update this to the path where your artifacts are located
+    ArtifactName: 'myArtifacts' # Name of the artifact
+    publishLocation: 'Container'
